--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Document</title>
+    <title>BTVN - DDT</title>
   </head>
 
   <body>
     <h1>Thinh depzai</h1>
-    <div class="flex-container">
-      <p>tnih sadsajassaddsd sdasdasdaasddddsadsadddddddddddddddsdasdaasdad</p>
-      <p>
-        asjdjsa ddfsdf adsdsaasasdasddsadasddddddddddddddddddddddddddasdasda sad
-      </p>
-    </div>
+    <ol>
+      <li><a href="./Task01/ex01-flexbox.html">Task 01</a></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ol>
   </body>
 </html>
