--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BTVN - DDT</title>
+    <style>
+      a {
+        color: aquamarine;
+      }
+    </style>
   </head>
 
   <body>
     <h1>Thinh depzai</h1>
     <ol>
       <li><a href="./Task01/ex01-flexbox.html">Task 01</a></li>
-      <li></li>
+      <li><a href="/Task02/index.html">Task 02</a></li>
       <li></li>
       <li></li>
       <li></li>
