--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BTVN - DDT</title>
-    <style>
-      a {
-        color: aquamarine;
-      }
-    </style>
   </head>
-
   <body>
     <h1>Thinh depzai</h1>
     <ol>
-      <li><a href="./Task01/ex01-flexbox.html">Task 01</a></li>
+      <li><a href="./Task01/task01.html">Task 01</a></li>
       <li><a href="/Task02/index.html">Task 02</a></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><a href="">Task 03</a></li>
+      <li><a href="">Task 04</a></li>
+      <li><a href="">Task 05</a></li>
+      <li><a href="">Task 06</a></li>
+      <li><a href="">Task 07</a></li>
+      <li><a href="">Task 08</a></li>
+      <li><a href="">Task 09</a></li>
     </ol>
   </body>
 </html>
