--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <h1>Thinh depzai</h1>
     <ol>
       <li><a href="./Task01/task01.html">Task 01</a></li>
-      <li><a href="/Task02/index.html">Task 02</a></li>
-      <li><a href="">Task 03</a></li>
+      <li><a href="./Task02/index.html">Task 02</a></li>
+      <li>
+        <a href="./project-ecommerce-thinhdd-codefarm/index.html">Task 03</a>
+      </li>
       <li><a href="">Task 04</a></li>
       <li><a href="">Task 05</a></li>
       <li><a href="">Task 06</a></li>
