--- a/Task01/task01.html
+++ b/Task01/task01.html
@@ -1,61 +1,73 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="task01.css" />
-    <title>Sign up</title>
+    <title>Document</title>
   </head>
   <body>
-    <div class="left">
-      <div class="content">
-        <h2>Get Started Now</h2>
-        <div class="form-group">
-          <label>Name</label>
-          <input type="text" placeholder="Enter your name" />
-        </div>
-        <div class="form-group">
-          <label>Email address</label>
-          <input type="text" placeholder="Enter your email" />
-        </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input type="password" placeholder="Name" />
-        </div>
-        <div class="terms">
-          <input type="checkbox" /> I agree to the terms & policy
-        </div>
-        <button class="signup-btn">Signup</button>
-        <div class="or"><span>Or</span></div>
-        <div class="social-buttons">
-          <button class="social-btn">
-            <img
-              src="https://www.google.com/favicon.ico"
-              alt="Google"
-              width="16"
-              height="16"
+    <div class="container">
+      <div>
+        <form action="/signup" class="form register">
+          <h1>Get Started Now</h1>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" name="name" placeholder="Enter your name" />
+          </div>
+          <div class="form-group">
+            <label for="name">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" />
+          </div>
+          <div class="form-group">
+            <label for="name">Password</label>
+            <input
+              type="password"
+              id="password"
+              placeholder="Enter your password"
             />
-            Sign in with Google
-          </button>
-          <button class="social-btn">
-            <img
-              src="https://www.apple.com/favicon.ico"
-              alt="Apple"
-              width="16"
-              height="16"
-            />
-            Sign in with Apple
-          </button>
-        </div>
-        <p>
-          Have an account?<a href="login.html" class="login-link"> Sign In</a>
-        </p>
+          </div>
+          <div class="form-group">
+            <input type="checkbox" placeholder="Enter your name" />
+            <span
+              >I agree to the <a href="/terms-policy">terms & policy</a></span
+            >
+          </div>
+          <div class="form-group">
+            <button type="submit">Signup</button>
+          </div>
+          <div class="or">Or</div>
+          <div class="social-buttons">
+            <div>
+              <a class="social-btn" href="">
+                <img
+                  src="https://www.google.com/favicon.ico"
+                  alt="Google"
+                  width="16"
+                  height="16"
+                />
+                Sign in with Google
+              </a>
+              <a class="social-btn" href="">
+                <img
+                  src="https://www.apple.com/favicon.ico"
+                  alt="Apple"
+                  width="16"
+                  height="16"
+                />
+                Sign in with Apple
+              </a>
+            </div>
+          </div>
+          <p>
+            Have an account?<a href="login.html" class="login-link"> Sign In</a>
+          </p>
+        </form>
       </div>
+      <img
+        src="c230ffba520fab60716f712257d7f6a7fc48a42f.jpg"
+        alt="brand-image"
+      />
     </div>
-    <img
-      src="c230ffba520fab60716f712257d7f6a7fc48a42f.jpg"
-      alt=""
-      class="right"
-    />
   </body>
 </html>
