--- a/project-ecommerce-thinhdd-codefarm/index.html
+++ b/project-ecommerce-thinhdd-codefarm/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="header-main">
         <div class="header-main__container">
-          <div class="logo"><a href="/">SHOP.CO</a></div>
+          <div class="logo"><a href="./cart.html">SHOP.CO</a></div>
           <nav class="main-menu">
             <ul class="main-menu__list">
               <li class="main-menu__item">
@@ -58,10 +58,10 @@
                 >
               </li>
               <li class="main-menu__item">
-                <a href="./cart.html" class="main-menu__link">New Arrivals</a>
+                <a href="" class="main-menu__link">New Arrivals</a>
               </li>
               <li class="main-menu__item">
-                <a href="./category.html" class="main-menu__link">Brands</a>
+                <a href="" class="main-menu__link">Brands</a>
               </li>
             </ul>
           </nav>
@@ -535,7 +535,7 @@
           <div class="footer-column">
             <h4>Company</h4>
             <ul>
-              <li><a href="#">About</a></li>
+              <li><a href="./category.html">About</a></li>
               <li><a href="#">Features</a></li>
               <li><a href="#">Works</a></li>
               <li><a href="#">Career</a></li>
