--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <li>
         <a href="./project-ecommerce-thinhdd-codefarm/index.html">Task 03</a>
       </li>
-      <li><a href="">Task 04</a></li>
+      <li><a href="./task01-js/index.html">Task 01-JS</a></li>
       <li><a href="">Task 05</a></li>
       <li><a href="">Task 06</a></li>
       <li><a href="">Task 07</a></li>
