folder-task01-js

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <li>
         <a href="./project-ecommerce-thinhdd-codefarm/index.html">Task 03</a>
       </li>
-      <li><a href="./task01-js/index.html">Task 01-JS</a></li>
-      <li><a href="">Task 05</a></li>
-      <li><a href="">Task 06</a></li>
-      <li><a href="">Task 07</a></li>
+      <li><a href="./task01-js/task01.html">Task 01-JS</a></li>
+      <li><a href="./task01-js/task02.html">Task 02-JS</a></li>
+      <li><a href="./task01-js/task03.html">Task 03-JS</a></li>
+      <li><a href="./task01-js/task04.html">Task 04-JS</a></li>
       <li><a href="">Task 08</a></li>
       <li><a href="">Task 09</a></li>
     </ol>
