--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
       <li>
         <a href="./project-ecommerce-thinhdd-codefarm/index.html">Task 03</a>
       </li>
-      <li><a href="./task06-js/bai1.html">Task6-b1-JS</a></li>
-      <li><a href="./task06-js/bai2.html">Task6-b2-JS</a></li>
-      <li><a href="./task06-js/bai3.html">Task6-b3-JS</a></li>
-      <li><a href="./task06-js/bai4.html">Task6-b4-JS</a></li>
-      <li><a href="./task06-js/bai5.html">Task6-b5-JS</a></li>
+      <li><a href="./task07-js/task01.html">Task7-b1-JS</a></li>
+      <li><a href="./task07-js/task02.html">Task7-b2-JS</a></li>
+      <li><a href="./task07-js/task03.html">Task7-b3-JS</a></li>
+      <li><a href="./task07-js/task04.html">Task7-b4-JS</a></li>
     </ol>
   </body>
 </html>
