--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       <li>
         <a href="./project-ecommerce-thinhdd-codefarm/index.html">Task 03</a>
       </li>
-      <li><a href="./task07-js/task01.html">Task7-b1-JS</a></li>
-      <li><a href="./task07-js/task02.html">Task7-b2-JS</a></li>
-      <li><a href="./task07-js/task03.html">Task7-b3-JS</a></li>
-      <li><a href="./task07-js/task04.html">Task7-b4-JS</a></li>
+      <li><a href="./task08-js/ex01.html">Task8-b1-JS</a></li>
+      <li><a href="./task08-js/ex02.html">Task8-b2-JS</a></li>
+      <li><a href="./task08-js/ex03.html">Task8-b3-JS</a></li>
     </ol>
   </body>
 </html>
