--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       <li>
         <a href="./project-ecommerce-thinhdd-codefarm/index.html">Task 03</a>
       </li>
-      <li><a href="./task08-js/ex01.html">Task8-b1-JS</a></li>
-      <li><a href="./task08-js/ex02.html">Task8-b2-JS</a></li>
-      <li><a href="./task08-js/ex03.html">Task8-b3-JS</a></li>
+      <li><a href="./task09-js/bai01.html">Task9-b1-JS</a></li>
+      <li><a href="./task09-js/bai02.html">Task9-b2-JS</a></li>
+      <li><a href="./task09-js/bai03.html">Task9-b3-JS</a></li>
+      <li><a href="./task09-js/bai04.html">Task9-b4-JS</a></li>
     </ol>
   </body>
 </html>
