--- a/task11-js/bai2.html
+++ b/task11-js/bai2.html
@@ -11,6 +11,7 @@
         align-items: center;
         height: 100vh;
         margin: 0;
+        background-image: url("https://img.freepik.com/free-photo/blue-abstract-background_53876-92920.jpg?w=2000");
       }
 
       table {
