--- a/task11-js/bai3.html
+++ b/task11-js/bai3.html
@@ -27,6 +27,54 @@
       #charCount.warning {
         color: #e74c3c; /* Màu đỏ khi còn ít ký tự */
       }
+
+      .khungTron {
+        position: relative;
+        width: 100px;
+        height: 100px;
+        margin: 30px auto 0;
+      }
+
+      .tronXanh {
+        width: 40px;
+        height: 40px;
+        background: #e5710b;
+        border-radius: 50%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      .quayTron {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 50%;
+        animation: quay 3s linear infinite;
+      }
+
+      .tronCam {
+        width: 10px;
+        height: 10px;
+        background: #3498db;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      @keyframes quay {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
     </style>
   </head>
   <body>
@@ -38,6 +86,13 @@
       ></textarea>
       <div id="wordCount">Số từ: 0</div>
       <div id="charCount">Số ký tự còn lại: 200</div>
+
+      <div class="khungTron">
+        <div class="tronXanh"></div>
+        <div class="quayTron">
+          <div class="tronCam"></div>
+        </div>
+      </div>
     </div>
     <script src="bai3.js"></script>
   </body>
